--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ button[type="submit"]:hover {
   top: 50%;
   left: 50%;
   width: 30%; /* Set a fixed width */
-  height: 40%; /* Set a fixed height */
+  height: 50%; /* Set a fixed height */
   background: rgb(17, 14, 14); /* Semi-transparent background */
   display: none;
   flex-direction: column;
@@ -371,12 +371,10 @@ button[type="submit"]:hover {
   padding: 20px;
 }
 
-.loading-message h2 {
-  margin-bottom: 20px;
-}
 
 .loading-message p {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 30px;
   font-weight: bold;
 }
 
@@ -460,4 +458,17 @@ button[type="submit"]:hover {
 
 .footer .social-icons a:hover {
   color: #ffffff;
+}
+
+.destination-image-container {
+  text-align: center;
+  margin: 20px auto;
+}
+
+.destination-img {
+  width: 100%;
+  max-width: 800px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
